Closes #1690 Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/timeout.xhtml
+++ b/src/main/webapp/timeout.xhtml
@@ -5,14 +5,34 @@
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Facelet Title</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
     </h:head>
     <h:body>
-        <h1>Timed Out. Please login again</h1>
         <h:form >
-            <p:commandButton 
-                value="Login Page" 
-                action="/index" 
-                ajax="false"></p:commandButton>
+            <div class="d-flex justify-content-center align-items-center text-center mt-5">
+                <div class="card w-75 h-50 shadow">
+                    <div class="card-body">
+                        <div class="my-5">
+                            <img src="https://st2.depositphotos.com/41237426/42830/v/450/depositphotos_428309110-stock-illustration-clock-simple-vector-icon-design.jpg" width="200px" alt="alt"/>
+                        </div>
+                        <h2 class="mb-4 text-danger">We're sorry, but your session has timed out</h2>
+                        <h5 class="m-2">
+                            For security reasons, your session was automatically terminated due to inactivity. 
+                            To ensure the safety of your account and data, it is necessary to log in again.
+                        </h5>
+
+
+                        <div class="d-flex justify-content-center align-items-center m-4">
+                            <p:commandButton 
+                                value="Login" 
+                                action="/index" 
+                                class="btn btn-primary"
+                                ajax="false"></p:commandButton>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </h:form>
     </h:body>
 </html>
