Closes Issue#1696 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/opd/opd_bill.xhtml
+++ b/src/main/webapp/opd/opd_bill.xhtml
@@ -321,7 +321,7 @@
                                                         ajax="false"
                                                         icon="fa fa-search"
                                                         class="ui-button-warning mx-1" 
-                                                        action="#{patientController.navigateToSearchPatients()}" 
+                                                        action="#{opdBillController.navigateToSearchPatients()}" 
                                                         >
                                                     </p:commandButton>
                                                     <p:commandButton 
