--- a/src/main/webapp/emr/patient_profile.xhtml
+++ b/src/main/webapp/emr/patient_profile.xhtml
@@ -153,7 +153,7 @@
                                                     <div class="d-flex flex-wrap w-100">
 
                                                         <!-- Medicine Selection -->
-                                                        <div class="mx-1">
+                                                        <div class="mx-1 flex-fill">
                                                             <label for="acMedicine" class="w-100">Medicine:</label>
                                                             <p:autoComplete id="acMedicine"
                                                                             completeMethod="#{pharmaceuticalItemController.completeItem}"
@@ -171,14 +171,15 @@
                                                         </div>
 
                                                         <!-- Dose Group -->
-                                                        <div class="d-flex flex-column mx-1">
-                                                            <div class="d-flex">
-                                                                <p:outputLabel id="lblItem" value="Dose" class="w-100" ></p:outputLabel>
-                                                                <p:inputText style="width: 6em;"
-                                                                             id="txtDose"
+                                                        <div class="mx-1 flex-fill">
+                                                            <label class="w-100">Dose:</label>
+                                                            <div class="d-flex w-100">
+                                                                <p:inputText id="txtDose"
+                                                                             class="flex-grow-1"
                                                                              value="#{patientEncounterController.patientMedicine.prescription.dose}"
                                                                              placeholder="Dose"/>
                                                                 <p:selectOneMenu id="cmbDose" 
+                                                                                 class="flex-grow-1"
                                                                                  value="#{patientEncounterController.patientMedicine.prescription.doseUnit}">
                                                                     <f:selectItem itemLabel="Select" />
                                                                     <f:selectItems value="#{measurementUnitController.getDoseUnitsForMedicine(patientEncounterController.patientMedicine.prescription.item)}" 
@@ -188,9 +189,10 @@
                                                         </div>
 
                                                         <!-- Frequency Selection -->
-                                                        <div class="d-flex flex-column mx-1">
+                                                        <div class="mx-1 flex-fill">
                                                             <label for="cmbFrequency" class="w-100">Frequency:</label>
                                                             <p:selectOneMenu id="cmbFrequency" 
+                                                                             class="w-100"
                                                                              value="#{patientEncounterController.patientMedicine.prescription.frequencyUnit}">
                                                                 <f:selectItem itemLabel="Select" />
                                                                 <f:selectItems value="#{measurementUnitController.frequencyUnits}" 
@@ -201,14 +203,15 @@
                                                         </div>
 
                                                         <!-- Duration Group -->
-                                                        <div class="d-flex flex-column mx-1">
+                                                        <div class="mx-1 flex-fill">
                                                             <label class="w-100">Duration:</label>
                                                             <div class="d-flex">
-                                                                <p:inputText style="width: 6em;"
-                                                                             id="txtDuration"
+                                                                <p:inputText id="txtDuration"
+                                                                             style="width: 6em;"
                                                                              value="#{patientEncounterController.patientMedicine.prescription.duration}"
                                                                              placeholder="Duration"/>
                                                                 <p:selectOneMenu id="cmbDuration" 
+                                                                                 class="flex-grow-1"
                                                                                  value="#{patientEncounterController.patientMedicine.prescription.durationUnit}">
                                                                     <f:selectItem itemLabel="Select" />
                                                                     <f:selectItems value="#{measurementUnitController.durationUnits}" 
@@ -227,9 +230,11 @@
                                                                              process="btnAddRx acMedicine txtDose cmbDose cmbFrequency txtDuration cmbDuration"
                                                                              update="tblRxx acMedicine txtDose cmbDose cmbFrequency txtDuration cmbDuration"
                                                                              action="#{patientEncounterController.addPatientMedicine}" />
+                                                            <p:defaultCommand target="btnAddRx" ></p:defaultCommand>
                                                         </div>
 
                                                     </div>
+
                                                 </div>
 
 
@@ -248,9 +253,9 @@
                                                                                    id="btnDeleteRx"
                                                                                    process="btnDeleteRx"
                                                                                    update="tblRxx"
-                                                                                   onclick="if (!confirm('Are you sure you want to delete this allergy?'))
+                                                                                   onclick="if (!confirm('Are you sure you want to remove this medicine?'))
                                                                                                return false;"
-                                                                                   action="#{patientEncounterController.removePatientDiagnosis()}"
+                                                                                               action="#{patientEncounterController.removePatientMedicine()}"
                                                                                    >
                                                                         <f:setPropertyActionListener target="#{patientEncounterController.removingClinicalFindingValue}" value="#{rx}"/>
                                                                     </p:commandLink>
