Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/emr/opd_visit.xhtml
+++ b/src/main/webapp/emr/opd_visit.xhtml
@@ -47,7 +47,7 @@
                                     <emr:patient_photo
                                         patient="#{patientController.current}" ></emr:patient_photo>
                                     <emr:patient_medicines
-                                        medicines="#{patientEncounterController.patientMedicines}" ></emr:patient_photo>
+                                        medicines="#{patientEncounterController.patientMedicines}" ></emr:patient_medicines>
 
                                 </h:form>
                             </p:tab>
