--- a/src/main/webapp/resources/ezcomp/emr/patient_medicines.xhtml
+++ b/src/main/webapp/resources/ezcomp/emr/patient_medicines.xhtml
@@ -10,8 +10,7 @@
     <cc:interface>
        
         <cc:attribute 
-            name="medicines" 
-            type="com.divudi.entity.clinical.ClinicalFindingValue"  />
+            name="medicines"   />
 
     </cc:interface>
 
