--- a/src/main/webapp/emr/admin/upload_visits.xhtml
+++ b/src/main/webapp/emr/admin/upload_visits.xhtml
@@ -7,7 +7,7 @@
     <h:head>
     </h:head>
     <h:body>
-        <ui:composition template="/emr/admin/index.xhtml">
+        <ui:composition template="/forms/index.xhtml">
             <ui:define name="subcontent">
                 <div class="container-fluid" >
                     <div class="card" >
