--- a/src/main/webapp/inward/inward_room.xhtml
+++ b/src/main/webapp/inward/inward_room.xhtml
@@ -20,34 +20,60 @@
                     <div class="row">
                         <div class="col-6">
                             <h:panelGrid id="gpSelect" columns="1" class="w-100" >
+
                                 <p:panel>
                                     <h:panelGrid id="gpSelectButtons" columns="3"  >
-                                        <p:commandButton id="btnAdd" value="Add" action="#{roomController.prepareAdd()}" styleClass="buttons" ajax="false"  />
+                                        <p:commandButton 
+                                            id="btnAdd" 
+                                            value="Add" 
+                                            class=" m-1 ui-button-success"
+                                            action="#{roomController.prepareAdd()}" 
+                                            ajax="false"  />
 
-                                        <p:commandButton ajax="false" id="btnDelete" 
-                                                         onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                                 return false;" 
-                                                         action="#{roomController.delete()}"  
-                                                         value="Delete"  >
+                                        <p:commandButton 
+                                            ajax="false" 
+                                            id="btnDelete" 
+                                            class=" m-1 ui-button-danger"
+                                            onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                                        return false;" 
+                                            action="#{roomController.delete()}"  
+                                            value="Delete"  >
                                         </p:commandButton>
                                     </h:panelGrid>
                                     <h:panelGrid id="gpSelectText" class="w-100">
                                         <p:selectOneListbox  id="lstSelect" 
                                                              value="#{roomController.current}" 
-                                                             style="min-width: 223px; height: 300px;">
+                                                             style="min-width: 223px; height: 300px;"
+                                                             filter="true">
                                             <f:selectItems  value="#{roomController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
                                             <f:ajax render="gpDetail" execute="lstSelect" >
                                             </f:ajax>
                                         </p:selectOneListbox>
                                     </h:panelGrid>
-                                    
                                 </p:panel>
+
                             </h:panelGrid  >
                         </div>
                         <div class="col-6">
                             <p:panel>
+                                <f:facet name="header" >
+
+                                    <div class="d-flex justify-content-center align-items-center">
+                                        <p:commandButton id="btnSave" value="Save"  
+                                                         action="#{roomController.saveSelected()}" 
+                                                         ajax="false" 
+                                                         class=" m-1 ui-button-warning"
+                                                         >
+                                            <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail selectFocus"  execute="gpDetail" >
+                                            </f:ajax>
+                                        </p:commandButton>
+                                        <p:defaultCommand target="btnSave"/>
+                                    </div>
+
+                                </f:facet>
+
                                 <h:panelGrid id="gpDetail" columns="1">
-                                    <h:panelGrid id="gpDetailText" columns="2" >
+                                    <p:panelGrid id="gpDetailText" columns="2" >
                                         <h:outputText id="lblName" value="Name" ></h:outputText>
                                         <p:inputText autocomplete="off" id="txtName" value="#{roomController.current.name}" class="ml-2 w-100" ></p:inputText>
                                         <h:outputLabel value="Default Facility Category"/>
@@ -59,18 +85,8 @@
                                         <p:selectBooleanCheckbox value="#{roomController.current.filled}" class="ml-2" />
 
 
-                                    </h:panelGrid>
-                                    <h:panelGrid id="gpDetailButtons" columns="2">
-                                        <p:commandButton id="btnSave" value="Save"  
-                                                         action="#{roomController.saveSelected()}" 
-                                                         ajax="false" 
-                                                         class="d-flex justify-content-end"
-                                                         >
-                                            <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail selectFocus"  execute="gpDetail" >
-                                            </f:ajax>
-                                        </p:commandButton>
-                                        <p:defaultCommand target="btnSave"/>
-                                    </h:panelGrid>
+                                    </p:panelGrid>
+
                                 </h:panelGrid>
                             </p:panel>
                         </div>
