--- a/src/main/webapp/inward/inward_room.xhtml
+++ b/src/main/webapp/inward/inward_room.xhtml
@@ -11,94 +11,70 @@
         <h:panelGroup >
             <h:form  >
                 <p:growl/>
-                <p:focus id="selectFocus" context="gpSelect" />
-                <p:focus id="detailFocus" context="gpDetail" />
-
-
+                <p:focus id="selectFocus" for="lstSelect" />
+                <p:focus id="detailFocus" for="txtName" />
                 <p:panel header="Manage Rooms" styleClass="alignTop" >
-
                     <div class="row">
                         <div class="col-6">
-                            <h:panelGrid id="gpSelect" columns="1" class="w-100" >
-
-                                <p:panel>
-                                    <h:panelGrid id="gpSelectButtons" columns="3"  >
-                                        <p:commandButton 
-                                            id="btnAdd" 
-                                            value="Add" 
-                                            class=" m-1 ui-button-success"
-                                            action="#{roomController.prepareAdd()}" 
-                                            ajax="false"  />
-
-                                        <p:commandButton 
-                                            ajax="false" 
-                                            id="btnDelete" 
-                                            class=" m-1 ui-button-danger"
-                                            onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                        return false;" 
-                                            action="#{roomController.delete()}"  
-                                            value="Delete"  >
-                                        </p:commandButton>
-                                    </h:panelGrid>
-                                    <h:panelGrid id="gpSelectText" class="w-100">
-                                        <p:selectOneListbox  id="lstSelect" 
-                                                             value="#{roomController.current}" 
-                                                             style="min-width: 223px; height: 300px;"
-                                                             filter="true">
-                                            <f:selectItems  value="#{roomController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
-                                            <f:ajax render="gpDetail" execute="lstSelect" >
-                                            </f:ajax>
-                                        </p:selectOneListbox>
-                                    </h:panelGrid>
-                                </p:panel>
-
-                            </h:panelGrid  >
+                           
+                                <p:commandButton 
+                                    id="btnAdd" 
+                                    value="Add" 
+                                    class=" m-1 ui-button-success w-25"
+                                    action="#{roomController.prepareAdd()}" 
+                                    process="btnAdd"
+                                    update="lstSelect gpDetail"
+                                    />
+                                <p:commandButton 
+                                    process="btnDelete"
+                                    update="lstSelect gpDetail"
+                                    id="btnDelete" 
+                                    class=" m-1 ui-button-danger w-25"
+                                    onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                                return false;" 
+                                    action="#{roomController.delete()}"  
+                                    value="Delete"  >
+                                </p:commandButton>
+                                <p:selectOneListbox  
+                                    id="lstSelect" 
+                                    value="#{roomController.current}" 
+                                    style="min-width: 223px; height: 300px;"
+                                    filter="true">
+                                    <f:selectItems  value="#{roomController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                                    <p:ajax update="gpDetail" process="lstSelect" >
+                                    </p:ajax>
+                                </p:selectOneListbox>
+                           
                         </div>
                         <div class="col-6">
-                            <p:panel>
+                            <h:panelGrid id="gpDetail" columns="1">
                                 <f:facet name="header" >
-
-                                    <div class="d-flex justify-content-center align-items-center">
+                                    <div class="d-flex justify-content-end align-items-center">
                                         <p:commandButton id="btnSave" value="Save"  
                                                          action="#{roomController.saveSelected()}" 
-                                                         ajax="false" 
-                                                         class=" m-1 ui-button-warning"
+                                                         process="btnSave gpDetailText" 
+                                                         class=" m-1 ui-button-warning w-25"
                                                          >
                                             <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail selectFocus"  execute="gpDetail" >
                                             </f:ajax>
                                         </p:commandButton>
                                         <p:defaultCommand target="btnSave"/>
                                     </div>
-
                                 </f:facet>
-
-                                <h:panelGrid id="gpDetail" columns="1">
-                                    <p:panelGrid id="gpDetailText" columns="2" >
-                                        <h:outputText id="lblName" value="Name" ></h:outputText>
-                                        <p:inputText autocomplete="off" id="txtName" value="#{roomController.current.name}" class="ml-2 w-100" ></p:inputText>
-                                        <h:outputLabel value="Default Facility Category"/>
-                                        <p:selectOneMenu value="#{roomController.current.parentCategory}" class="ml-2 w-100">
-                                            <f:selectItem itemLabel="Select a default Facility Category"/>
-                                            <f:selectItems value="#{roomCategoryController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
-                                        </p:selectOneMenu>   
-                                        <h:outputText value="Room is Under Construction" ></h:outputText>
-                                        <p:selectBooleanCheckbox value="#{roomController.current.filled}" class="ml-2" />
-
-
-                                    </p:panelGrid>
-
-                                </h:panelGrid>
-                            </p:panel>
+                                <p:panelGrid id="gpDetailText" columns="2" >
+                                    <h:outputText id="lblName" value="Name" ></h:outputText>
+                                    <p:inputText autocomplete="off" id="txtName" value="#{roomController.current.name}" class="ml-2 w-100" ></p:inputText>
+                                    <h:outputLabel value="Default Facility Category"/>
+                                    <p:selectOneMenu value="#{roomController.current.parentCategory}" class="ml-2 w-100">
+                                        <f:selectItem itemLabel="Select a default Facility Category"/>
+                                        <f:selectItems value="#{roomCategoryController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
+                                    </p:selectOneMenu>   
+                                    <h:outputText value="Room is Under Construction" ></h:outputText>
+                                    <p:selectBooleanCheckbox value="#{roomController.current.filled}" class="ml-2" />
+                                </p:panelGrid>
+                            </h:panelGrid>
                         </div>
-
-
-
                     </div>
-
-                    <h:panelGrid id ="gpVeda" columns="2" >
-
-
-                    </h:panelGrid>
                 </p:panel>
             </h:form>
 
