--- a/src/main/webapp/emr/opd_visit.xhtml
+++ b/src/main/webapp/emr/opd_visit.xhtml
@@ -470,72 +470,110 @@
                                 </p:tab>
                                 <p:tab title="Referrals">
 
+                                    <div class="row" >
+                                        <div class="col-4 p-1" >
+                                            <p:panelGrid columns="3" class="w-100 m-1" >
+                                                <f:facet name="header" >
+                                                    <p:outputLabel value="Generate New Document" ></p:outputLabel>
+                                                </f:facet>
+
+                                                <p:outputLabel value="Select a Template" ></p:outputLabel>
+                                                <p:selectOneMenu id="somTemplates" value="#{patientEncounterController.selectedDocumentTemplate}" >
+                                                    <f:selectItem itemLabel="Select" ></f:selectItem>
+                                                    <f:selectItems 
+                                                        value="#{patientEncounterController.userDocumentTemplates}"
+                                                        var="dt"
+                                                        itemLabel="#{dt.name}"
+                                                        itemValue="#{dt}"></f:selectItems>
+                                                </p:selectOneMenu>
+                                                <p:commandButton 
+                                                    id="btnGenerateNewDocument"
+                                                    value="Generate" 
+                                                    process="btnGenerateNewDocument somTemplates"
+                                                    update="lstEncounterDocs"
+                                                    action="#{patientEncounterController.generateAndAddDocumentFromTemplate}" >
+                                                </p:commandButton>
+
+                                            </p:panelGrid>
+
+                                            <p:panelGrid columns="3" class="w-100 m-1" >
+                                                <f:facet name="header" >
+                                                    <p:outputLabel value="Generated Documents" ></p:outputLabel>
+                                                </f:facet>
+                                                <p:selectOneListbox 
+                                                    id="lstEncounterDocs"
+                                                    value="#{patientEncounterController.encounterReferral}"  >
+                                                    <f:selectItems 
+                                                        value="#{patientEncounterController.encounterReferrals}" 
+                                                        var="ref"
+                                                        itemLabel="#{ref.stringValue}"
+                                                        itemValue="#{ref}"></f:selectItems>
+                                                    <p:ajax  
+                                                        process="lstEncounterDocs" 
+                                                        update="gpReferralDoc" ></p:ajax>
+                                                </p:selectOneListbox>
+                                            </p:panelGrid>
+
+
+
+
+
+
+                                        </div>
+                                        <div class="col-8" >
+                                            <p:panelGrid columns="1" id="gpReferralDoc" >
+                                                <f:facet name="header" >
+
+                                                    <p:commandButton 
+                                                        id="btnSaveDoc"
+                                                        value="Save" 
+                                                        action="#{patientEncounterController.saveEncounterReferral()}"
+                                                        process="btnSaveDoc txtReferralDoc"
+                                                        update="lstEncounterDocs">
+                                                    </p:commandButton>
+                                                    <p:commandButton 
+                                                        id="btnDeleteDoc"
+                                                        value="Delete" 
+                                                        action="#{patientEncounterController.saveEncounterReferral()}"
+                                                        process="btnDeleteDoc"
+                                                        update="lstEncounterDocs txtReferralDoc">
+                                                    </p:commandButton>
+                                                    <h:outputLabel 
+                                                        rendered="#{patientEncounterController.encounterReferral.stringValue ne null}"
+                                                        id="txtDocName" 
+                                                        value="#{patientEncounterController.encounterReferral.stringValue}"></h:outputLabel>
+                                                </f:facet>
+                                                <h:panelGroup id="txtReferralDoc" ></h:panelGroup>
+                                                <p:textEditor 
+                                                    rendered="#{patientEncounterController.encounterReferral.lobValue ne null}" 
+                                                    secure="false" 
+                                                    value="#{patientEncounterController.encounterReferral.lobValue}" >
+                                                </p:textEditor>
+                                            </p:panelGrid>          
+
+                                        </div>
+
+                                    </div>
+
 
                                     <p:panel id="panelDocuments" 
                                              rendered="#{patientEncounterController.userDocumentTemplates ne null}">
-                                        <p:selectOneMenu id="somTemplates" value="#{patientEncounterController.selectedDocumentTemplate}" >
-                                            <f:selectItem itemLabel="Select" ></f:selectItem>
-                                            <f:selectItems 
-                                                value="#{patientEncounterController.userDocumentTemplates}"
-                                                var="dt"
-                                                itemLabel="#{dt.name}"
-                                                itemValue="#{dt}"></f:selectItems>
-                                        </p:selectOneMenu>
-                                        <p:commandButton 
-                                            id="btnGenerateNewDocument"
-                                            value="Generate" 
-                                            process="btnGenerateNewDocument somTemplates"
-                                            update="lstEncounterDocs"
-                                            action="#{patientEncounterController.generateAndAddDocumentFromTemplate}" >
-                                        </p:commandButton>
 
 
 
 
 
 
-                                        <p:selectOneListbox 
-                                            id="lstEncounterDocs"
-                                            value="#{patientEncounterController.encounterReferral}"  >
-                                            <f:selectItems 
-                                                value="#{patientEncounterController.encounterReferrals}" 
-                                                var="ref"
-                                                itemLabel="#{ref.stringValue}"
-                                                itemValue="#{ref}"></f:selectItems>
-                                            <p:ajax  
-                                                process="lstEncounterDocs" 
-                                                update="gpReferralDoc lblTmp" ></p:ajax>
-                                        </p:selectOneListbox>
+
+
 
                                         <p:commandButton value="Update" 
                                                          ajax="false"
                                                          process="lstEncounterDocs" 
-                                                         update="gpReferralDoc lblTmp txtReferralDoc" ></p:commandButton>
+                                                         update="gpReferralDoc txtReferralDoc" ></p:commandButton>
 
-                                        <h1>A</h1>
-                                        <p:outputLabel value="#{patientEncounterController.encounterReferral}" 
-                                                       id="lblTmp" ></p:outputLabel>
-                                        <h1>B</h1>
 
-                                        <h:panelGroup id="gpReferralDoc" >
-                                            <p:commandButton 
-                                                id="btnSaveDoc"
-                                                value="Save" 
-                                                action="#{patientEncounterController.saveEncounterReferral()}"
-                                                process="btnSaveDoc txtReferralDoc"
-                                                update="lstEncounterDocs">
-                                            </p:commandButton>
-                                            <p:inputText 
-                                                rendered="#{patientEncounterController.encounterReferral.stringValue ne null}"
-                                                id="txtDocName" 
-                                                value="#{patientEncounterController.encounterReferral.stringValue}"></p:inputText>
-                                            <p:textEditor 
-                                                id="txtReferralDoc"
-                                                rendered="#{patientEncounterController.encounterReferral.lobValue ne null}" 
-                                                secure="false" 
-                                                value="#{patientEncounterController.encounterReferral.lobValue}" >
-                                            </p:textEditor>
-                                        </h:panelGroup>           
+
 
 
                                     </p:panel>
