Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/emr/opd_visit.xhtml
+++ b/src/main/webapp/emr/opd_visit.xhtml
@@ -490,7 +490,7 @@
                                                     id="btnGenerateNewDocument"
                                                     value="Generate" 
                                                     process="btnGenerateNewDocument somTemplates"
-                                                    update="lstEncounterDocs"
+                                                    update="lstEncounterDocs gpReferralDoc"
                                                     action="#{patientEncounterController.generateAndAddDocumentFromTemplate}" >
                                                 </p:commandButton>
 
