--- a/src/main/webapp/inward/inward_room_category.xhtml
+++ b/src/main/webapp/inward/inward_room_category.xhtml
@@ -58,10 +58,10 @@
                     </div>
                     <div class="col-6">
 
-                        <h:panelGrid id="gpDetail" columns="2" class="w-100">
+                        <p:panelGrid id="gpDetail" columns="2" class="w-100">
                             <h:outputText id="lblName" value="Name" ></h:outputText>
                             <p:inputText class="mx-2 w-100" autocomplete="off" id="txtName" value="#{roomCategoryController.current.name}"  ></p:inputText>
-                        </h:panelGrid>
+                        </p:panelGrid>
                         <p:commandButton  
                             id="btnSave"
                             value="Save" 
